# File-OS

./: .gitignore  CMakeCache.txt  CMakeLists.txt  File-OS.sln  Makefile  OS课程设计报告.doc  README.md  cmake_install.cmake  sh.exe.stackdump  ~$课程设计报告.doc
Debug/: File-OS.ilk
File-OS/: Access.h  ClassDiagram.cd  ClassDiagram1.cd  DiskManager.h  DiskMannger.cpp  DiskMannger.h  FAT.cpp  FAT.h  FCB.cpp  FCB.h  File-OS.vcxproj  File-OS.vcxproj.filters  File.cpp  File.h  FileType.h  Folder.cpp  Folder.h  PCB.H  PCB.cpp  i.txt  main.cpp  music
File-OS/Debug/: vc141.idb
File-OS/Debug/File-OS.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  File-OS.lastbuildstate  link-VCTIP.delete.128.tlog  link-VCTIP.delete.24.tlog  link-VCTIP.delete.25.tlog  link-VCTIP.delete.26.tlog  link-VCTIP.delete.28.tlog  link-VCTIP.delete.31.tlog  link-VCTIP.delete.34.tlog  link-VCTIP.delete.35.tlog  link-VCTIP.delete.40.tlog  link-VCTIP.delete.41.tlog  link-VCTIP.delete.44.tlog  link-VCTIP.delete.77.tlog  link-VCTIP.delete.83.tlog  link-VCTIP.read.1.tlog  link-VCTIP.read.105.tlog  link-VCTIP.read.25.tlog  link-VCTIP.read.26.tlog  link-VCTIP.write.128.tlog  link-VCTIP.write.26.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
File-OS/x64/Debug/: diskmannger.obj.enc  vc141.idb
File-OS/x64/Debug/File-OS.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  File-OS.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: DiskManager.h  FCB.cpp  File.cpp  Folder.h
x64/Debug/: File-OS.ilk
